testData/annotators/functions/InvalidArgumentClassButExpectedString_expected.Camel
${headerAs(<error descr="Expected type: String">java.lang.String</error>, <error descr="Expected type: Class">"header"</error>)} == "a"